--- a/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
@@ -9,12 +9,17 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-font": "~8.4.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-navigation": "4.0.10",
+    "react-navigation-drawer": "~2.3.3",
+    "react-navigation-stack": "~1.10.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
