--- a/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
@@ -17,14 +17,19 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
-    "react-navigation": "4.0.10",
-    "react-navigation-drawer": "~2.3.3",
-    "react-navigation-stack": "~1.10.3",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-material-kit": "^0.6.0-beta.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.15.0",
     "react-native-unimodules": "~0.12.0",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "4.0.10",
+    "react-navigation-drawer": "~2.3.3",
+    "react-navigation-stack": "~1.10.3",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
