--- a/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
