--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "angularx-qrcode": "^11.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
