--- a/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/react-native-expo-client/cov-track/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-barcode-scanner": "~9.1.0",
     "expo-font": "~8.4.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
