--- a/programs/workspace/cov-track_client-side-application/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/package.json
@@ -12,7 +12,9 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-barcode-scanner": "~9.1.0",
+    "expo-camera": "~9.1.0",
     "expo-font": "~8.4.0",
+    "expo-location": "~10.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
