--- a/programs/workspace/cov-track_server-side-application/package.json
+++ b/programs/workspace/cov-track_server-side-application/package.json
@@ -9,12 +9,17 @@
   "author": "Ranul Ladduwahetty",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "4.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "8.5.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.12.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "0.4.1",
+    "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
