--- a/programs/workspace/cov-track_client-side-application/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.12.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
@@ -29,6 +30,7 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "4.0.10",
+    "react-navigation-animated-switch": "^0.6.4",
     "react-navigation-drawer": "~2.3.3",
     "react-navigation-stack": "~1.10.3",
     "react-redux": "^7.2.2",
