--- a/programs/workspace/cov-track_server-side-application/.babelrc
+++ b/programs/workspace/cov-track_server-side-application/.babelrc
@@ -1,6 +1,20 @@
 {
-    "presets": [
-        "env",
-        "stage-0"
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "node": "current"
+        }
+      }
     ]
+  ],
+  "plugins": [
+    [
+      "transform-object-rest-spread",
+      {
+        "useBuiltIns": true
+      }
+    ]
+  ]
 }
