--- a/programs/workspace/cov-track_server-side-application/package.json
+++ b/programs/workspace/cov-track_server-side-application/package.json
@@ -4,26 +4,44 @@
   "description": "Backend for CovTrack",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js --exec babel-node -e js"
+    "start": "nodemon ./index.js --exec babel-node -e js",
+    "clean": "rimraf dist",
+    "dev:build": "yarn run clean && webpack -w",
+    "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
+    "prettier": "prettier --single-quote --print-width 80 --trailing-comma all --write 'src/**/*.js'"
   },
-  "author": "Ranul Ladduwahetty",
-  "license": "MIT",
   "dependencies": {
-    "bcrypt": "4.0.1",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "jsonwebtoken": "8.5.1",
-    "mongodb": "^3.6.4",
-    "mongoose": "^5.12.2",
-    "nodemon": "^2.0.7",
-    "passport": "0.4.1",
-    "passport-jwt": "4.0.0",
-    "passport-local": "1.0.0"
+    "bcrypt-nodejs": "^0.0.3",
+    "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
+    "cross-env": "^5.0.0",
+    "express": "^4.15.3",
+    "express-validation": "^1.0.2",
+    "helmet": "^3.6.0",
+    "http-status": "^1.0.1",
+    "joi": "^10.5.0",
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.9.9",
+    "mongoose-unique-validator": "^1.0.5",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
+    "slug": "^0.9.1",
+    "validator": "^7.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.4.0",
+    "eslint": "^3.19.0",
+    "eslint-config-equimper": "^2.0.5",
+    "eslint-config-prettier": "^2.1.1",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
+    "prettier": "^1.3.1",
+    "rimraf": "^2.6.1",
+    "webpack": "^2.5.1",
+    "webpack-node-externals": "^1.6.0"
   }
 }
