Refactor code (in progress)

--- a/programs/workspace/cov-track_server-side-application/package.json
+++ b/programs/workspace/cov-track_server-side-application/package.json
@@ -2,9 +2,13 @@
   "name": "cov-track_server-side-application",
   "version": "1.0.0",
   "description": "Backend for CovTrack",
+  "author": "Ranul Ladduwahetty",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js --exec babel-node -e js",
+    "start": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
+    "web": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
+    "build": "yarn run clean && webpack -w",
     "clean": "rimraf dist",
     "dev:build": "yarn run clean && webpack -w",
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
