--- a/programs/workspace/cov-track_server-side-application/package.json
+++ b/programs/workspace/cov-track_server-side-application/package.json
@@ -18,6 +18,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.1",
     "compression": "^1.6.2",
+    "cors": "^2.8.5",
     "cross-env": "^5.0.0",
     "express": "^4.15.3",
     "express-validation": "^1.0.2",
