--- a/programs/workspace/cov-track_client-side-application/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/package.json
@@ -19,6 +19,8 @@
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
+    "mobx": "^6.1.8",
+    "mobx-react": "^7.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
