--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
@@ -11,18 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
-    "@angular/cdk": "^11.2.4",
+    "@angular/animations": "^10.2.4",
+    "@angular/cdk": "^11.2.7",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.1.6",
-    "@angular/material": "^11.2.4",
+    "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "@material/card": "^10.0.0",
+    "angular-highcharts": "^11.3.1",
     "angularx-qrcode": "^1.5.3",
     "hammerjs": "^2.0.8",
+    "highcharts": "^9.0.1",
+    "highcharts-angular": "^2.10.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
