--- a/programs/workspace/cov-track_client-side-application/cov-track/app.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/app.json
@@ -1,8 +1,9 @@
 {
-  "name": "cov-track",
-  "displayName": "cov-track",
+  "name": "CovTrack",
+  "displayName": "CovTrack",
+  "githubUrl":"https://github.com/LRANUL/UOP_SE_Y3S2-PUSL3111_API_SOFTWARE_DEVELOPMENT/tree/developer/programs/workspace/cov-track_client-side-application/cov-track",
   "expo": {
-    "name": "cov-track",
+    "name": "CovTrack",
     "slug": "cov-track",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -14,7 +15,8 @@
       "fallbackToCacheTimeout": 0
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.covtrack.rpls"
     },
     "splash": {
       "image": "./src/assets/images/splash.png",
@@ -25,7 +27,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/images/adaptive-icon.png",
         "backgroundColor": "#77BC3F"
-      }
+      },
+      "package": "com.covtrack.rpls"
     },
     "web": {
       "favicon": "./src/assets/images/favicon.png"
