--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/angular.json
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/angular.json
@@ -21,7 +21,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js",
+              "src/manifest.json"
             ],
             "styles": [
               "src/custom-theme.scss",
