--- a/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
+++ b/programs/workspace/cov-track_management-system-client-side-application/cov-track-manager/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
+    "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.1.6",
     "@angular/material": "^11.2.7",
@@ -24,7 +25,9 @@
     "@angular/router": "~10.1.6",
     "@material/card": "^10.0.0",
     "angular-highcharts": "^11.3.1",
+    "angular-notifier": "^9.0.1",
     "angularx-qrcode": "^1.5.3",
+    "firebase": "^8.4.1",
     "hammerjs": "^2.0.8",
     "highcharts": "^9.0.1",
     "highcharts-angular": "^2.10.0",
