--- a/programs/workspace/cov-track_client-side-application/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/package.json
@@ -36,9 +36,12 @@
     "react-navigation-animated-switch": "^0.6.4",
     "react-navigation-drawer": "~2.3.3",
     "react-navigation-stack": "~1.10.3",
+    "react-query": "^3.13.11",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "zustand": "^3.4.1",
+    "zustand-persist": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
