--- a/programs/workspace/cov-track_server-side-application/package.json
+++ b/programs/workspace/cov-track_server-side-application/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
     "dist": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
     "web": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
-    "build": "yarn run clean && webpack -w",
+    "build": "yarn run clean && webpack",
     "clean": "rimraf dist",
     "dev:build": "yarn run clean && webpack -w",
     "dev": "cross-env NODE_ENV=development nodemon dist/index.bundle.js",
