--- a/programs/workspace/cov-track_client-side-application/cov-track/package.json
+++ b/programs/workspace/cov-track_client-side-application/cov-track/package.json
@@ -23,6 +23,7 @@
     "mobx-react": "^7.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-map-gl": "^6.1.12",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-material-kit": "^0.6.0-beta.1",
